# vstr

./: BUGS  ChangeLog  LD_STATS  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  VERSION  aclocal.m4  autogen.sh  bounce_ld  configure  configure.in  gnome-config-missing.sh.in  mkinstalldirs  shtool  vstr.pc.in  vstr.spec  vstr.spec.in  vstrConf.sh  vstrConf.sh.in
Documentation/: Makefile.am  Makefile.in  basic_cat.c  basic_cat.c.html  comparison.html  constants.3  constants.html  constants.txt  cost_tutorial.html  cost_tutorial.shtml  design.html  diff_symbols.sh  f_c.css  functions.3  functions.html  functions.txt  gdb_functions.txt  httpd.html  list_constants_doc.sh  list_constants_src.pl  list_functions_doc.sh  list_functions_src.pl  mov_tutorial.html  namespace.html  old-tutorial.html  overview.html  overview.txt  printf_comparison.html  req_trunc_io.html  sec_txt2html.pl  security.html  security.shtml  security_problems.csv  security_problems.html  security_problems.txt  size_cmp.gnumeric  speed.html  structs.html  structs.txt  tutorial.html  (+6 more)
Documentation/sec/: alloc2.c
examples/: Makefile  Makefile.am  Makefile.in  README  USER_AGENT_ACCEPT  bag.c  bag.h  cntl.c  cntl.h  conf-mode.el  conf.c  conf.h  date.c  date.h  dir_list.css  dns.c  dns.h  evnt.c  evnt.h  ex1.c  ex10.c  ex11.c  ex12.c  ex13.c  ex14.c  ex1_mmap_file  ex2.c  ex3.c  ex4.c  ex5.c  ex6.c  ex7.c  ex8.c  ex9.c  ex_cat.c  ex_ccount.c  ex_cntl.c  ex_conf.c  ex_csv.c  ex_dir_filter.c  (+68 more)
examples/html/: ex_cat.c.html  ex_changelog_diff.c.html  ex_csv.c.html  ex_gmp_factorials.c.html  ex_gmp_num_roman.c.html  ex_gmp_num_words.c.html  ex_gmp_nums.c.html  ex_hello_world.c.html  ex_hello_world.h.html  ex_hello_world_m.c.html  ex_hello_world_s.c.html  ex_hello_world_x.c.html  ex_hexdump.c.html  ex_highlight.c.html  ex_limited_cat.c.html  ex_lookup_ip.c.html  ex_mon_cp.c.html  ex_netstr.c.html  ex_nl.c.html  ex_perf.h.html  ex_perf_add.c.html  ex_perf_nodesize.c.html  ex_perf_nodesize_foreach.c.html  ex_perf_sgopenssl.c.html  ex_rainbow.c.html  ex_roman.c.html  ex_rot13.c.html  ex_slowcat.c.html  ex_ssi.c.html  ex_utils.h.html  ex_yes.c.html  ex_zcat.c.html  f_c.css
examples/init.d/: jechod.in  jhttpd.in
examples/tst/: ex_conf_httpd_out_1  ex_conf_httpd_out_5  ex_conf_httpd_tst_1  ex_conf_httpd_tst_5  ex_conf_out_1  ex_conf_tst_1  ex_echod_help_out_1  ex_echod_version_out_1  ex_hexdump_none_out_3  ex_hexdump_out_2  ex_httpd_errs_out_1  ex_httpd_errs_out_10  ex_httpd_errs_out_11  ex_httpd_errs_out_12  ex_httpd_errs_out_13  ex_httpd_errs_out_14  ex_httpd_errs_out_16  ex_httpd_errs_out_17  ex_httpd_errs_out_18  ex_httpd_errs_out_19  ex_httpd_errs_out_2  ex_httpd_errs_out_22  ex_httpd_errs_out_23  ex_httpd_errs_out_25  ex_httpd_errs_out_26  ex_httpd_errs_out_27  ex_httpd_errs_out_28  ex_httpd_errs_out_29  ex_httpd_errs_out_30  ex_httpd_errs_out_31  ex_httpd_errs_out_32  ex_httpd_errs_out_33  ex_httpd_errs_out_34  ex_httpd_errs_out_4  ex_httpd_errs_out_5  ex_httpd_errs_out_8  ex_httpd_errs_tst_14  ex_httpd_errs_tst_17  ex_httpd_errs_tst_18  ex_httpd_errs_tst_28  (+57 more)
libtool_hack/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  assert_loop.c  fix.c  linker-script  vstr.c  vstr_add.c  vstr_add_fmt.c  vstr_add_fmt_dbl_asm.S  vstr_add_fmt_dbl_glibc.c  vstr_add_fmt_dbl_host.c  vstr_add_fmt_dbl_none.c  vstr_add_netstr.c  vstr_cache.c  vstr_cmp.c  vstr_cntl.c  vstr_conv.c  vstr_cstr.c  vstr_data.c  vstr_del.c  vstr_dup.c  vstr_export.c  vstr_fmt.c  vstr_inline.c  vstr_join.c  vstr_mov.c  vstr_parse.c  vstr_parse_netstr.c  vstr_ref.c  vstr_register.c  vstr_register_cb.c  vstr_sc.c  vstr_sc_noposix.c  vstr_sc_posix.c  vstr_sect.c  vstr_split.c  vstr_spn.c  vstr_srch.c  vstr_srch_case.c  vstr_srch_netstr.c  (+2 more)
src/vstr_dbl/: vstr_add_fmt_dbl_glibc.c  vstr_add_fmt_dbl_host.c  vstr_add_fmt_dbl_none.c
tst/: Makefile.am  Makefile.in  tmpl-tst.c  tst-main.c  xfail-tst-main.c
tst/add/: Makefile.am  Makefile.in  tst_add_buf.c  tst_add_iovec_buf.c  tst_add_netstr.c  tst_add_netstr2.c  tst_add_non.c  tst_add_ptr.c  tst_add_ref.c  tst_add_rep_chr.c  tst_add_vstr.c  tst_buf.c  tst_iovec_buf.c  tst_netstr.c  tst_netstr2.c  tst_non.c  tst_ptr.c  tst_ref.c  tst_rep_chr.c  tst_vstr.c  xfail_tst_add_buf_NULL.c  xfail_tst_add_netstr_beg_NULL.c  xfail_tst_add_netstr_end_NULL.c  xfail_tst_add_non_NULL.c  xfail_tst_add_ptr_NULL.c  xfail_tst_add_ref_NULL_ref.c  xfail_tst_add_ref_NULL_vstr.c  xfail_tst_add_ref_pos.c  xfail_tst_add_vstr_NULL_f.c  xfail_tst_add_vstr_NULL_t.c
tst/add_fmt/: Makefile.am  Makefile.in  tst_bkmg.c  tst_char.c  tst_double.c  tst_int.c  tst_intmax_t.c  tst_ip.c  tst_long.c  tst_long_double.c  tst_m.c  tst_n.c  tst_num.c  tst_oct.c  tst_ptrdiff_t.c  tst_size_t.c  tst_str_norm.c  tst_usr.c
tst/cache/: Makefile.am  Makefile.in  tst_cache_free.c  tst_cache_srch.c  tst_cache_usr.c  tst_srch.c  tst_usr.c
tst/cmp/: Makefile.am  Makefile.in  tst-cmp.h  tst.c  tst_case.c  tst_cmp.c  tst_cmp_case.c  tst_cmp_non.c  tst_cmp_vers.c  tst_non.c  tst_vers.c  tst_vstr.c  tst_vstr_case.c  tst_vstr_non.c  tst_vstr_vers.c
tst/cntl/: Makefile.am  Makefile.in  tst_cntl_base.c  tst_cntl_conf.c  tst_cntl_opt.c  tst_conf.c  tst_opt.c
tst/conv/: Makefile.am  Makefile.in  tst_conv_decode.c  tst_conv_encode.c  tst_conv_lowercase.c  tst_conv_unprintable.c  tst_conv_uppercase.c  tst_decode.c  tst_encode.c  tst_lowercase.c  tst_unprintable.c  tst_uppercase.c
tst/data/: xfail_tst_data_srch_NULL.c
tst/del/: Makefile.am  Makefile.in  tst_all.c  tst_beg.c  tst_del_all.c  tst_del_beg.c  tst_del_empty.c  tst_del_end.c  tst_del_mid.c  tst_empty.c  tst_end.c  tst_mid.c  xfail_tst_del_NULL.c  xfail_tst_del_oob_len.c  xfail_tst_del_oob_pos.c
tst/dup/: Makefile.am  Makefile.in  tst_buf.c  tst_dup_buf.c  tst_dup_non.c  tst_dup_ptr.c  tst_dup_ref.c  tst_dup_rep_chr.c  tst_dup_vstr.c  tst_non.c  tst_ptr.c  tst_ref.c  tst_rep_chr.c  tst_vstr.c
tst/export/: Makefile.am  Makefile.in  tst_buf.c  tst_chr.c  tst_cstr_buf.c  tst_cstr_malloc.c  tst_cstr_ptr.c  tst_cstr_ref.c  tst_export_buf.c  tst_export_chr.c  tst_export_cstr_buf.c  tst_ref.c  (+11 more)
(+236 files in other folders)
